machine-bindings/cartesi-machine-sys/src/headers/machine-c-api.h

/// \brief Machine instance handle
/// \details cm_machine* is handle used from C api users
/// to pass the machine object when calling C api functions. Currently,
/// it is merely a pointer to internal C++ object that is  internally casted
/// back to original C++ machine type. On some obscure CPU arhitectures
/// where pointer size depend on types, this api might not work
typedef struct cm_machine_tag cm_machine; // NOLINT(modernize-use-using)
/// \brief Reads the value of the mimpid register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_mimpid(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Reads the value of the mcycle register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_mcycle(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Writes the value of the mcycle register.
/// \param m Pointer to valid machine instance
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_mcycle(cm_machine *m, uint64_t val, char **err_msg);
/// \brief Reads the value of the icycleinstret register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_icycleinstret(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Writes the value of the icycleinstret register.
/// \param m Pointer to valid machine instance
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_icycleinstret(cm_machine *m, uint64_t val, char **err_msg);
/// \brief Reads the value of the mstatus register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_mstatus(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Writes the value of the mstatus register.
/// \param m Pointer to valid machine instance
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_mstatus(cm_machine *m, uint64_t val, char **err_msg);
/// \brief Reads the value of the menvcfg register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_menvcfg(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Writes the value of the menvcfg register.
/// \param m Pointer to valid machine instance
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_menvcfg(cm_machine *m, uint64_t val, char **err_msg);
/// \brief Reads the value of the mtvec register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_mtvec(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Writes the value of the mtvec register.
/// \param m Pointer to valid machine instance
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_mtvec(cm_machine *m, uint64_t val, char **err_msg);
/// \brief Reads the value of the mscratch register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_mscratch(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Writes the value of the mscratch register.
/// \param m Pointer to valid machine instance
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_mscratch(cm_machine *m, uint64_t val, char **err_msg);
/// \brief Reads the value of the mepc register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_mepc(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Writes the value of the mepc register.
/// \param m Pointer to valid machine instance
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_mepc(cm_machine *m, uint64_t val, char **err_msg);
/// \brief Reads the value of the mcause register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_mcause(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Writes the value of the mcause register.
/// \param m Pointer to valid machine instance
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_mcause(cm_machine *m, uint64_t val, char **err_msg);
/// \brief Deletes the error message
/// \param err_msg Pointer to error message received from some other function
/// \details This C API is meant to be used for various language bindings.
/// Many of them could not directly call C free function,
/// so this is a convenience function for cleanup of error messages
CM_API void cm_delete_cstring(const char *err_msg);