machine-bindings/cartesi-machine-sys/src/bindings.rs

extern "C" {
    #[doc = " \\brief Reads the value of the mimpid register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_mimpid(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the mcycle register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_mcycle(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes the value of the mcycle register.\n \\param m Pointer to valid machine instance\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_mcycle(
        m: *mut cm_machine,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the icycleinstret register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_icycleinstret(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes the value of the icycleinstret register.\n \\param m Pointer to valid machine instance\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_icycleinstret(
        m: *mut cm_machine,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the mstatus register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_mstatus(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes the value of the mstatus register.\n \\param m Pointer to valid machine instance\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_mstatus(
        m: *mut cm_machine,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the menvcfg register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_menvcfg(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes the value of the menvcfg register.\n \\param m Pointer to valid machine instance\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_menvcfg(
        m: *mut cm_machine,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the mtvec register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_mtvec(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes the value of the mtvec register.\n \\param m Pointer to valid machine instance\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_mtvec(
        m: *mut cm_machine,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the mscratch register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_mscratch(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes the value of the mscratch register.\n \\param m Pointer to valid machine instance\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_mscratch(
        m: *mut cm_machine,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the mepc register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_mepc(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes the value of the mepc register.\n \\param m Pointer to valid machine instance\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_mepc(
        m: *mut cm_machine,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the mcause register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_mcause(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes the value of the mcause register.\n \\param m Pointer to valid machine instance\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_mcause(
        m: *mut cm_machine,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
